--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // gson
+    implementation 'com.google.code.gson:gson:2.8.5'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    //barcode
+    implementation 'com.google.firebase:firebase-ml-vision:19.0.3'
 }
+apply plugin: 'com.google.gms.google-services'
